# TessellationIFX

./: CMakeLists.txt  README.txt
include/: object.h  object_id.h
include/buffers/: ebo.h  vao.h  vbo.h
include/controls/: camera.h  camera_controls.h  keys.h
include/mesh/: mesh.h  mesh_data.h  model.h
include/mesh/loaders/: mesh_loader.h  model_demo_loader.h  model_loader.h
include/mesh/patch/: patch.h
include/rendering/: render_object.h  window.h
include/rendering/lighting/: light_group.h  light_source.h
include/rendering/lighting/builders/: dirlight_shader_builder.h  light_shader_builder.h  light_shader_common_data.h  pointlight_shader_builder.h  spotlight_shader_builder.h
include/rendering/lighting/types/: light_directional.h  light_point.h  light_spotlight.h
include/rendering/loaders/: light_loader.h  render_object_loader.h
include/scene/: scene.h
include/shaders/: fragment_shader.h  program.h  shader.h  tess_control_shader.h  tess_eval_shader.h  vertex_shader.h
include/shaders/loaders/: program_loader.h  shader_loader.h
include/textures/: texture_loader.h
res/shaders/tessellation/bicubic_bezier/: tess.fs  tess.tes
res/shaders/tessellation/lod/: tess.tcs  tess.tes
src/: main.cpp  object.cpp  object_id.cpp
src/buffers/: ebo.cpp  vao.cpp  vbo.cpp
src/controls/: camera.cpp  camera_controls.cpp  keys.cpp
src/mesh/: mesh.cpp  mesh_data.cpp  model.cpp
src/mesh/loaders/: mesh_loader.cpp  model_demo_loader.cpp  model_loader.cpp
src/mesh/patch/: patch.cpp
src/rendering/: render_object.cpp  window.cpp
src/rendering/lighting/: light_group.cpp  light_source.cpp
src/rendering/lighting/builders/: dirlight_shader_builder.cpp  light_shader_builder.cpp  light_shader_common_data.cpp  pointlight_shader_builder.cpp  spotlight_shader_builder.cpp
src/rendering/lighting/types/: light_directional.cpp  light_point.cpp  light_spotlight.cpp
src/rendering/loaders/: light_loader.cpp  render_object_loader.cpp
src/scene/: scene.cpp
src/shaders/: fragment_shader.cpp  program.cpp  shader.cpp  tess_control_shader.cpp  tess_eval_shader.cpp  vertex_shader.cpp
src/shaders/loaders/: program_loader.cpp  shader_loader.cpp
src/textures/: texture_loader.cpp
